--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>Austin Eng</title>
-
+    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/ui-lightness/jquery-ui.css" type="text/css" media="all" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 
 <body>
@@ -26,13 +26,41 @@
                 <li><a class="active" id="all">All</a></li>
                 <li><a class="active" id="film">Film</a></li>
                 <li><a class="active" id="animation">Animation</a></li>
-                <li><a class="active" id="applications">Web Design</a></li>
+                <li><a class="active" id="web">Web Design</a></li>
                 <li><a class="active" id="photography">Photography</a></li>
                 <li><a class="active" id="painting">Painting</a></li>
             </ul>
         </div>
         <div class="row" id="project-wrapper">
-            <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-4 photography" id="ny">
+            <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 web" id="prebith">
+                <div class="project-content"  style="background-image: url('projects/web/prebirth/prebirth.jpg');">
+                    <div class="description">
+                        <div>Web Design</div><br />
+                        A website I designed to promote a short film I worked on, "Prebirth: The Eternal War"
+                        <br /><br />
+                        Built with HTML, CSS, and Javascript
+                        <br /><br />
+                        <a href="http://www.prebirthmovie.com">http://www.prebirthmovie.com</a>
+                    </div>
+                    <div class="desc-bg-container"><div class="desc-bg"></div></div>
+                    <div class="gallery"><iframe src="http://www.prebirthmovie.com"></iframe></div>
+                </div>
+            </div>
+            <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 web">
+                <div class="project-content"  style="background-image: url('projects/web/smc/smc.jpg');">
+                    <div class="description">
+                        <div>Web Design</div><br />
+                        A website I designed to display the work of the film group I am part of, StopMotionClub
+                        <br /><br />
+                        Built with HTML, CSS, Javascript, and PHP
+                        <br /><br />
+                        <a href="http://www.stopmotionclub.com">http://www.stopmotionclub.com</a>
+                    </div>
+                    <div class="desc-bg-container"><div class="desc-bg"></div></div>
+                    <div class="gallery"><iframe src="http://www.stopmotionclub.com"></iframe></div>
+                </div>
+            </div>
+            <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 photography" id="ny">
                 <div class="project-content" style="background-image: url('projects/photography/ny/IMG_8892_DxO.jpg');">
                     <div class="description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
@@ -56,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-8 photography" id="fall">
+            <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 photography" id="fall">
                 <div class="project-content" style="background-image: url('projects/photography/fall/IMG_8535_DxO.jpg');">
                     <div class="description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
@@ -111,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-8 painting" id="painting">
+            <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 painting" id="painting">
                 <div class="project-content" style="background-image: url('projects/painting/IMG_8729_DxO.jpg');">
                     <div class="description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
@@ -132,14 +160,6 @@
                         <div class="right-button gal-btn"></div>
                     </div>
 
-                </div>
-            </div>
-            <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 applications">
-                <div class="project-content">
-                    <div class="description">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
-                    </div>
-                    <div class="desc-bg-container"><div class="desc-bg"></div></div>
                 </div>
             </div>
             <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-8 film">
