--- a/index.html
+++ b/index.html
@@ -37,11 +37,42 @@
                 <div class="up-arrow"></div>
                 <div>Click the toggles above to turn categories on and off</div>
             </div>
+            <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 film">
+                <div class="project-content"  style="background-image: url('projects/video/prebirth.jpg');">
+                    <div class="description">
+                        <div>Film</div><br />
+                        Prebirth: The Eternal War
+                        <br /><br />
+                        This is a short film I worked on over the summer for which I served as First Assistant Cinematographer.
+                        <br /><br/>
+                        Before Jaclyn was born, the Devil sent an army of demons led by Saihttam to take her life. Now, her guardian angel, Matthias, must guide her to a portal that will bring her soul to Earth.
+
+                        <br /><br />
+                        <a href="http://www.prebirthmovie.com">website</a><br/>
+                        <a href="http://www.facebook.com/prebirthmovie">facebook</a><br/>
+                        <a href="http://twitter.com/prebirthmovie">twitter</a>
+                    </div>
+                    <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/prebirth_blur.jpg')"></div></div>
+                    <div class="gallery"><iframe class="video" src="//www.youtube.com/embed/jitxqJj-oe4" frameborder="0" allowfullscreen></iframe></div>
+                </div>
+            </div>
+            <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 film">
+                <div class="project-content"  style="background-image: url('projects/video/SI.jpg');">
+                    <div class="description">
+                        <div>Film</div><br />
+                        A set of visual effects shots my friend and I were assigned to work on.
+                        <br />
+                        A 3D model was used to compose the exterior elements of the space ship.
+                    </div>
+                    <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/SI_blur.jpg')"></div></div>
+                    <div class="gallery"><iframe class="video" src="//www.youtube.com/embed/IBm8ktlMb5k" frameborder="0" allowfullscreen></iframe></div>
+                </div>
+            </div>
             <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 animation">
                 <div class="project-content"  style="background-image: url('projects/video/shatter.jpg');">
                     <div class="description">
                         <div>Animation</div><br />
-                        An physics simulation created in Blender and rendered with Cycles
+                        A physics simulation created in Blender and rendered with Cycles
                         <br /><br />
                         This animation features a wineglass as it strikes a ceramic tile floor. Specular and displacement maps were used to get the proper reflections off the floor.
                     </div>
@@ -217,38 +248,6 @@
                         <div class="right-button gal-btn"></div>
                     </div>
 
-                </div>
-            </div>
-            <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-8 film">
-                <div class="project-content">
-                    <div class="description">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
-                    </div>
-                    <div class="desc-bg-container"><div class="desc-bg"></div></div>
-                </div>
-            </div>
-            <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-4 animation">
-                <div class="project-content">
-                    <div class="description">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
-                    </div>
-                    <div class="desc-bg-container"><div class="desc-bg"></div></div>
-                </div>
-            </div>
-            <div class="project item1 col-lg-4 col-sm-4 col-xs-4 film">
-                <div class="project-content">
-                    <div class="description">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
-                    </div>
-                    <div class="desc-bg-container"><div class="desc-bg"></div></div>
-                </div>
-            </div>
-            <div class="project item2 col-lg-8 col-sm-8 col-xs-8 animation">
-                <div class="project-content">
-                    <div class="description">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
-                    </div>
-                    <div class="desc-bg-container"><div class="desc-bg"></div></div>
                 </div>
             </div>
         </div>
